0.0.39 - Feb 16 2017
- 

0.0.38 - Feb 16 2017
- added solo tag to test classes to run just that class easily
- mostly finished cloudflare bypass, bit stuck on a weird bug
- super-mini-patch 0.0.38.1: fixed the bug I think! Seems to work now :)

0.0.37 - Feb 13 2017
- fixed bug with non-integer chapter numberings
- whipped up a quick auto pom updater that changes the build version to match what's in this file

0.0.36 - Feb 13 2017
- finished first fully functional prototype of manga downloading!

0.0.35 - Feb 12 2017
- added scrollbar to chapter download panel
- finished backend reading the urls from download panel - just need to wrap up the code to actually download a chapter directly from URL now!

0.0.34 - Feb 11 2017
- chapters now show up properly in the new chapter download panel
- seems to be a bit laggy with lots of chapters (for example ika musume's 400+ chapters causes some lag) - will try to fix asap

0.0.33 - Feb 11 2017
- added explicit jetty dependencies to prevent dependency conflicts
- finally figured out how to set listeners for dynamically created elements (I am a jQuery noob hehe)
- on a side note, scripts.js is extremely messy right now - rest assured it'll be refactored at some point!
- made a lot of progress on download UI - basically done, now just need to do the program stuff (loading in chapters into the panel and downloading)

0.0.32 - Feb 10 2017
- Added ExperimentalTests for playing around with code
- added dependencies: Selenium and bonigarcia's web driver manager (for automated management of PhantomJS drivers on any OS)
- added working experimental code for bypassing kissmanga cloudflare protection with headless phantomjs browser thru selenium